<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_category_appearance">

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:iconSpaceReserved="false"
            app:key="theme"
            app:title="@string/settings_theme"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:iconSpaceReserved="false"
            app:key="language"
            app:title="@string/settings_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
